# kpir

./: .gitignore  .gitmodules  LICENSE  go.mod  go.sum  kpir_benchmark.sh  kpir_benchmark_test.go  kpir_test.go  main.go  output.txt  output2.txt  readme.md  run.sh
cppir/: aes_amd64.s  cppir.go  cppir_benchmark.sh  cppir_benchmark_test.go  cppir_test.go  go.mod  piano.go  singlepass.go  singleserver.go
hepir/: go.mod  hepir.go  hepir_benchmark.sh  hepir_benchmark_test.go  hepir_test.go
hepir/simplepir/: database.go  double_pir.go  gauss.go  gauss_test.go  go.mod  matrix.go  params.csv  params.go  pir.go  pir.h  rand.go  simple_pir.go  utils.go
kvs/: bbhash2kvs.go  bffkvs.go  go.mod  go.sum  kvs.go  kvs_benchmark.sh  kvs_benchmark_test.go  kvs_test.go  mphf.go  mphfkvs.go
kvs/bbhash/: .gitignore  bbhash.go  bbhash_test.go  bbhash_wrapper.cpp  build_bbhash.sh  go.mod  readme.md
kvs/consensusrecsplit/: .gitignore  build_consensusrecsplit.sh  consensusrecsplit.go  consensusrecsplit_test.go  consensusrecsplit_wrapper.cpp  consensusrecsplit_wrapper.hpp  go.mod  readme.md
kvs/consensusrecsplit/ConsensusRecSplit/: .gitmodules  CITATION.cff  CMakeLists.txt  README.md
kvs/consensusrecsplit/ConsensusRecSplit/.github/workflows/: build.yml
kvs/consensusrecsplit/ConsensusRecSplit/benchmark/: benchmark_construction.cpp  benchmark_kperfect.cpp
kvs/consensusrecsplit/ConsensusRecSplit/extlib/fips/: .gitmodules  CMakeLists.txt  README.md
kvs/consensusrecsplit/ConsensusRecSplit/extlib/fips/.github/workflows/: build.yml
kvs/consensusrecsplit/ConsensusRecSplit/extlib/fips/benchmark/: BenchmarkData.h  benchmark_construction.cpp
kvs/consensusrecsplit/ConsensusRecSplit/extlib/fips/include/: Fips.h
kvs/consensusrecsplit/ConsensusRecSplit/extlib/fips/scripts/: bechmark.sh
kvs/consensusrecsplit/ConsensusRecSplit/include/: ConsensusRecSplit.h  ConsensusRecSplitQueryOptimized.h
kvs/consensusrecsplit/ConsensusRecSplit/include/consensus/: BumpedKPerfectHashFunction.h  SplittingTreeStorageLevelwise.h  SplittingTreeStorageQueryOptimized.h  UnalignedBitVector.h
kvs/consensusrecsplit/ConsensusRecSplit/scripts/: parameters.sh
kvs/pthash/: .gitignore  build_pthash.sh  go.mod  pthash.go  pthash_test.go  pthash_wrapper.cpp  readme.md
kvs/xorfilter/: binaryfusefilter.go  fingerprint.go
sipir/: aes_arm64.s  go.mod  piano.go  singlepass.go  singleserver.go  sipir.go  sipir_benchmark.sh  sipir_benchmark_test.go  sipir_test.go
utils/: database.go  fingerprint.go  go.mod  kv_benchmark_test.go  kv_test.go  serial.go
